--- a/front-end/src/pages/login.css
+++ b/front-end/src/pages/login.css
@@ -87,7 +87,7 @@
 }
 
 /* make sure styling looks good on mobile as well */
-@media screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
     .login h1{
         font-size: 24px;
         padding-bottom:10px;
