--- a/front-end/src/pages/profile.css
+++ b/front-end/src/pages/profile.css
@@ -30,7 +30,7 @@
 
 /* ensure styling looks good on mobile */
 
-@media  screen and (max-width:600px) {
+@media only screen and (max-width:600px) {
 
     .profile label {
         font-size: 1.2em;
